# smart-arabic-sentiment-api

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_model.py
app/: ai_summary.py  config.py  error_handler.py  main.py  model.py  utils.py
frontend/: index.html
