[project]
name = "smart-arabic-sentiment-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]
